<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DNA</string>
    <string name="splash_title">ElixiumOS</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="app_version_category_title">Version of the app</string>
    <string name="app_version_summary">This version is not completly stable</string>
    <string name="app_version">3.0 Test</string>
    <string name="about_title">About</string>
    <string name="about_info">ROM</string>
    <string name="summary_about">Who made this app?</string>
    <string name="about_info_summary">DNA+ is an extensions of the settings app for manage the extra tweaks</string>
    <string name="about_devs">Developers</string>
    <string name="about_dev_title">Alessandro Pasini</string>
    <string name="about_dev_summary">AKA MasterJack1697</string>
    <string name="about_mentions">Mentions</string>
    <string name="about_mention1_title">Francesco Colella</string>
    <string name="about_mention1_summary">My master, otherwise knowed like mnemonyc</string>
    <string name="devices">Supported Devices</string>
    <string name="device_op3t">OnePlus 3 and 3T</string>
    <string name="device_op3t_maintainer">MasterJack1697</string>
    <string name="device_nexus9">HTC Nexus 9 WIFI</string>
    <string name="device_nexus9_maintainer">MasterJack1697</string>
    <string name="device_motoz">Lenovo Moto Z</string>
    <string name="device_motoz_maintainer">MasterJack1697</string>
    <string name="notif_shortcut_title_short">Statusbar</string>
    <string name="notif_shortcut_title_long">Statusbar Customizations</string>
    <string name="ls_shortcut_title_short">LockScreen</string>
    <string name="ls_shortcut_title_long">LockScreen Customizations</string>
    <string name="button_title">Buttons</string>
    <string name="button_summary">Reorganize the nav bar and the buttons</string>
    <string name="gestures_title">Gestures</string>
    <string name="gestures_summary">Disable or enable some goods gestures</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="navbar_title">Navigation bar</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Customize the power menu animation</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="recents_title">Recents Screen</string>
    <string name="recents_summary">Choose what you preefere for the recents screen</string>
    <string name="volume_title">Volume rockers</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Customize the HeadsUp notifications</string>
    <string name="statusbar_title">Status bar</string>
    <string name="statusbar_summary">Customize statusbar actions</string>
    <string name="ls_summary">Customize lockscreen and her functions</string>
    <string name="ls_title">Lockscreen</string>
    <string name="other_title">Misc</string>
    <string name="other_summary">More misc customizations!</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="quick_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="quick_pulldown_summary_always">Always show Quick Settings on status bar pulldown</string>
    <string name="quick_pulldown_off">Off</string>
    <string name="quick_pulldown_left">Left</string>
    <string name="quick_pulldown_right">Right</string>
    <string name="quick_pulldown_always">Always</string>
    <string name="button_pref_title">Buttons</string>
    <string name="enable_navigation_bar_title">Enable software keys</string>
    <string name="enable_navigation_bar_summary">Enable on-screen navigation keys</string>
    <string name="hardware_brightness_keys_title">Backlight</string>
    <string name="hardware_brightness_keys_summary">Enable navigation keys backlight</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Assist button</string>
    <string name="hardware_keys_app_switch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_launch_camera">Open camera</string>
    <string name="hardware_keys_action_last_app">Launch last app</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="power_menu_animation_title">Power menu animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="power_menu_animation_aosp">AOSP (default)</string>
    <string name="power_menu_animation_bottom">Bottom</string>
    <string name="power_menu_animation_top">Top</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="listsystem">list</string>
    <string name="sizer_title">App remover</string>
    <string name="caution">Caution!</string>
    <string name="sizer_message_startup">This tool allows you to delete system apps. Use with caution and only delete apps you know are safe to be removed.</string>
    <string name="sizer_message_delete">Are you sure you want to delete this app?</string>
    <string name="btn_delete">Delete selected APPs now!</string>
    <string name="delete_progress_title">Deleting</string>
    <string name="delete_progress">Selected files are being deleted...</string>
    <string name="delete_success">Deleted</string>
    <string name="delete_fail">Unable to delete</string>
    <string name="btn_profile">Profile</string>
    <string name="sizer_message_sdnowrite">Cannot write to SD Card.</string>
    <string name="sizer_message_sdnoread">Cannot read SD Card.</string>
    <string name="sizer_message_filesuccess">Created profile.</string>
    <string name="sizer_message_filefail">Failed to create profile.</string>
    <string name="sizer_message_noselect">Nothing selected.</string>
    <string name="system_app_remover">System App Remover</string>
    <string name="buttons_pref_title">Buttons</string>
    <string name="buttons_pref_summary">Customize your device keys and buttons</string>
    <string name="home_key_title">Home button</string>
    <string name="back_key_title">Back button</string>
    <string name="menu_key_title">Menu button</string>
    <string name="assist_key_title">Assist button</string>
    <string name="app_switch_key_title">Recents button</string>
    <string name="camera_key_title">Camera button</string>
    <string name="short_press_title">Short press action</string>
    <string name="long_press_title">Long press action</string>
    <string name="double_tap_title">Double tap action</string>
    <string name="action_nothing">No action</string>
    <string name="action_menu">Open/close menu</string>
    <string name="action_app_switch">Recents</string>
    <string name="action_search">Search assistant</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_in_app_search">In-app search</string>
    <string name="action_launch_camera">Open camera</string>
    <string name="action_last_app">Launch last app</string>
    <string name="action_splitscreen">Splitscreen</string>
    <string name="display_rotation_title">Rotation angles</string>
    <string name="display_rotation_summary">Chose between 0,90,180,270</string>
    <string name="display_rotation_disabled">Disabled</string>
    <string name="display_rotation_unit">degrees</string>
    <string name="display_rotation_category_title">Rotation modes</string>
    <string name="display_rotation_0_title">0 degrees</string>
    <string name="display_rotation_90_title">90 degrees</string>
    <string name="display_rotation_180_title">180 degrees</string>
    <string name="display_rotation_270_title">270 degrees</string>
    <string name="display_lockscreen_rotation_title">Lock screen</string>
    <string name="battery_enable_title">Show battery</string>
    <string name="battery_setting_title">Battery customizations</string>
    <string name="battery_setting_summary">Customize battery icon and color</string>
    <string name="statusbar_battery_summary">Set style of status bar battery display</string>
    <string name="battery_title">Statusbar battery</string>
    <string name="statusbar_percent_inside_title">Percent overlay</string>
    <string name="statusbar_percent_inside_summary">Display percent on top of the the battery image</string>
    <string name="statusbar_charging_image_title">Charging indicator</string>
    <string name="statusbar_category_charging_title">Charging</string>
    <string name="statusbar_charging_image_summary">Display bolt indicator while charging. Hides percent overlay</string>
    <string name="statusbar_battery_charging_color_title">Color</string>
    <string name="statusbar_battery_charging_color_enable_title">Color while charging</string>
    <string name="statusbar_battery_charging_color_enable_summary"></string>
    <string name="battery_style_title">Style</string>
    <string name="battery_percent_title">Show percent</string>
    <string name="battery_percent_none">Never</string>
    <string name="battery_percent_always">Always</string>
    <string name="battery_percent_expanded">Expanded</string>
    <string name="screenshot_crop_and_share_title">Screenshot crop &amp; share</string>
    <string name="screenshot_crop_and_share_summary">Show an editor window after taking a screenshot in order to do some operations like cropping, saving or sharing it</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="dt2s_on_summary">DT2S is ON</string>
    <string name="dt2s_off_summary">DT2S is OFF</string>
    <string name="powermenu_items_title">PowerMenu Items</string>
    <string name="powermenu_items_summary">Chose the items in the power menu"</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="clock_settings_title">Clock and Date</string>
    <string name="clock_settings_summary">Customize clock and date visualization</string>
</resources>