<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 ElixiumOS
     Copyright (C) 2016 AOTP - Android Open Tuning Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
	
	<!-- App header -->
    <PreferenceScreen android:key="app_logo"
        android:layout="@layout/app_logo">
	</PreferenceScreen>

    <PreferenceCategory
        android:key="category_aotp_about_info"
        android:title="@string/about_info">
        
        <Preference
            android:summary="@string/about_info_summary" />
           	
    </PreferenceCategory>
    
	<!-- Developers -->
    <PreferenceCategory
        android:key="category_aotp_about_devs"
        android:title="@string/about_devs">

        <Preference
        android:title="@string/about_dev_title"
	    android:summary="@string/about_dev_summary" />

    </PreferenceCategory>

	<!-- Honorable mentions -->
    <PreferenceCategory
        android:key="category_aotp_about_mentions"
        android:title="@string/about_mentions">
        
        <Preference
            android:title="@string/about_mention1_title"
           	android:summary="@string/about_mention1_summary" />
       	
    </PreferenceCategory>


	<!-- APP Version -->
    <PreferenceCategory
        android:key="app_version"
        android:title="@string/app_version_category_title">
        
        <Preference
        android:title="@string/app_version"
        android:summary="@string/app_version_summary" />
       	
    </PreferenceCategory>
    
</PreferenceScreen>