<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 ElixiumOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <Preference
        android:title="@string/battery_setting_title"
        android:summary="@string/battery_setting_summary"
        android:fragment="com.elix.dna.fragments.BatteryFragment" />

    <Preference
        android:title="@string/clock_settings_title"
        android:summary="@string/clock_settings_summary"
        android:fragment="com.elix.dna.fragments.ClockFragment" />
       
    <ListPreference
        android:key="quick_pulldown"
        android:title="@string/quick_pulldown_title"
        android:entries="@array/quick_pulldown_entries"
        android:entryValues="@array/quick_pulldown_values"
        android:persistent="false" />

    <com.elix.dna.preferences.SystemCheckBoxPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_to_sleep_title"
        android:summary="@string/double_tap_to_sleep_summary"
        android:defaultValue="false" />

</PreferenceScreen>
