<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2016 The Dirty Unicorns Project
     Copyright (C) 2017 ElixiumOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <!-- Display Rotation -->
    <Preference
             android:title="@string/display_rotation_title"
             android:summary="@string/display_rotation_summary"
             android:fragment="com.elix.dna.fragments.DisplayRotation" />

    <!-- Toast Icon Switch -->
    <com.elix.dna.preferences.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="false" />

    <!-- Screenshot crop and share -->
    <com.elix.dna.preferences.SystemCheckBoxPreference
           android:key="screenshot_crop_and_share"
           android:title="@string/screenshot_crop_and_share_title"
           android:summary="@string/screenshot_crop_and_share_summary"
           android:defaultValue="false" />


    <!-- System APP Remover -->
    <Preference
            android:id="@+id/system_app_remover"
            android:title="@string/system_app_remover"
            android:fragment="com.elix.dna.fragments.SystemappRemover" />

</PreferenceScreen>
