<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/global_activity_margin"
    android:layout_marginLeft="@dimen/global_activity_margin"
    android:layout_marginTop="@dimen/global_activity_margin"
    android:layout_marginBottom="@dimen/global_activity_margin"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:id="@+id/gesture_card"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="200dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/buttons_ico" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="255dp"
            android:layout_height="51dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/gestures_title"
            android:textSize="17sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="51dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/gestures_summary"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/statusbar_card"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:elevation="200dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/buttons_ico" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="255dp"
            android:layout_height="51dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/statusbar_title"
            android:textSize="17sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="51dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/statusbar_summary"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </android.support.v7.widget.CardView>

</LinearLayout>
